# Art-Forge

./: CMakeLists.txt  LICENSE  README.md
include/ArtForge/: Engine.hpp  ShaderTypes.hpp
resources/: AppIcon.icns  Info.plist.in  apply_finder_icon.sh
resources/shaders/: ArtForge.metal
src/: Engine.cpp  main.mm
src/macOS/: AppDelegate.h  AppDelegate.mm  Renderer.h  Renderer.mm
tests/: EngineTests.cpp  MetalShaderCompile.mm
